--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -80,7 +80,7 @@
   text-align: start;
 }
 
-.subheading {
+.subheaders {
   height: 2em;
   font-size: 0.5em;
   text-align: start;
